<resources>
    <string name="app_name">RestFulService</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="name_label">Name</string>
    <string name="name_value">[Name]</string>
    <string name="num_label">Nummber</string>
    <string name="num_value">[Number]</string>
    <string name="email_label">Email</string>
    <string name="email_value">[Email]</string>
    <string name="action_refresh">Refresh</string>
</resources>
